frontend/parser.ts
import {
    AssignmentExpr,
    BinaryExpr,
    CallExpr,
    Expr, ForStatement,
    FunctionDeclaration,
    Identifier,
    IfStatement,
    MemberExpr,
    NumericLiteral,
    ObjectLiteral,
    Program,
    Property,
    Stmt,
    VarDeclaration,
    WhileStatement
} from "./ast";
import {Token, tokenize, TokenType} from "./lexer";

export default class Parser {

    private tokens: Token[] = [];

    private not_eof(): boolean {
        return this.tokens[0].type != TokenType.EOF;
    }

    private at() {
        return this.tokens[0] as Token;
    }

    private eat(){
        const prev = this.tokens.shift() as Token;
        return prev;
    }

    private expect(type: TokenType, err){
        const prev = this.tokens.shift() as Token;
        if (!prev || prev.type != type){
            console.error("Parser Error: ", err, prev, "Expecting: ", type);
            process.exit(1);
        }

        return prev;
    }

    public produceAST (sourceCode: string): Program {

        this.tokens = tokenize(sourceCode);

        const program: Program = {
            kind: "Program",
            body: [],
        };

        while (this.not_eof()){
            program.body.push(this.parse_stmt());
        }

        return program;
    }

    private parse_stmt(): Stmt {
        switch (this.at().type){
            case TokenType.Let:
            case TokenType.Const:
                return this.parse_var_declaration();
            case TokenType.Fn:
                return this.parse_fn_declaration();
            case TokenType.If:
                return this.parse_if_statement();
            case TokenType.While:
                return this.parse_while_statement();
            case TokenType.For:
                return this.parse_for_statement();
            default:
                return this.parse_expr();
        }
    }

    private parse_block_statement(): Stmt[] {
        this.expect(TokenType.OpenBrace, "Expected '{' for block statement");

        const body: Stmt[] = [];

        while (this.at().type !== TokenType.EOF && this.at().type !== TokenType.CloseBrace){
            body.push(this.parse_stmt());
        }

        this.expect(TokenType.CloseBrace, "Expected '}' at end of block statement");

        return body;
    }

    private parse_for_statement(): Stmt {
        this.eat();

        this.expect(TokenType.OpenParen, "Expected '(' after for keyword");

        const init = this.parse_var_declaration();
        const test = this.parse_expr();

        this.expect(TokenType.Semicolon, "Expected ';' after expression");

        const update = this.parse_expr();
        this.expect(TokenType.CloseParen, "Expected ')' to close for stmt");

        const body = this.parse_block_statement();

        return {kind: "ForStatement", init, test, update, body} as ForStatement;
    }

    private parse_while_statement(): Stmt {
        this.eat();

        this.expect(TokenType.OpenParen, "Expected '(' after while statement");

        const test = this.parse_expr();

        this.expect(TokenType.CloseParen, "Expected closing ')' after expression");

        const body = this.parse_block_statement();

        return {kind: "WhileStatement", test, body} as WhileStatement;
    }

    private parse_if_statement(): Stmt {
        this.eat();

        this.expect(TokenType.OpenParen, "Expected '(' after if statement");

        const test = this.parse_expr();

        this.expect(TokenType.CloseParen, "Expected closing ')' after expression");

        const body = this.parse_block_statement();

        let alternate: Stmt[] = [];

        if (this.at().type == TokenType.Else){
            this.eat();

            if (this.at().type == TokenType.If){
                alternate = [this.parse_if_statement()]
            } else {
                alternate = this.parse_block_statement();
            }
        }

        return {kind: "IfStatement", test, body, alternate} as IfStatement;
    }

    private parse_fn_declaration(): Stmt {
        this.eat();

        const name = this.expect(TokenType.Identifier, "Expected function name following 'func'").value;

        const args = this.parse_args();
        const params: string[] = [];

        for (const arg of args){
            if (arg.kind !== "Identifier"){
                console.log(arg);
                throw "Inside function wrong params are set";
            }

            params.push((arg as Identifier).symbol);
        }

        const body = this.parse_block_statement();

        const fn = {body, name, parameters: params, kind: "FunctionDeclaration"} as FunctionDeclaration;

        return fn;
    }

    private parse_var_declaration(): Stmt {
        const isConstant = this.eat().type == TokenType.Const;
        const identifier = this.expect(TokenType.Identifier, "Expected identifier name after let | const keyword.").value;

        if (this.at().type == TokenType.Semicolon){
            this.eat(); // Eats the token
            if (isConstant)
                console.error("const variable cannot be declared without a value");

            return {kind: "VarDeclaration", identifier, constant: false, value: undefined} as VarDeclaration;
        }

        this.expect(TokenType.Equals, "Expected equals '=' after var declaration");

        const declaration = {kind: "VarDeclaration", value: this.parse_expr(), identifier, constant: isConstant} as VarDeclaration;

        this.expect(TokenType.Semicolon, "Statements must end with semi-colon ';'")

        return declaration;
    }

    private parse_expr(): Expr {
        return this.parse_assignment_expr();
    }

    private parse_assignment_expr(): Expr {
        const left = this.parse_object_expr();

        if (this.at().type == TokenType.Equals){
            this.eat();
            const value = this.parse_assignment_expr();

            return {value, assigne: left, kind: "AssignmentExpr"} as AssignmentExpr;
        }

        return left;
    }

    private parse_object_expr(): Expr {
        if (this.at().type !== TokenType.OpenBrace){
            return this.parse_comparison_expr();
        }

        this.eat();

        const properties = new Array<Property>();

        while (this.not_eof() && this.at().type != TokenType.CloseBrace){
            const key = this.expect(TokenType.Identifier, "Object literal key expected").value;

            if (this.at().type == TokenType.Comma){
                this.eat();
                properties.push({key, kind: "Property", value: undefined} as Property);
                continue;
            } else if (this.at().type == TokenType.CloseBrace){
                properties.push({key, kind: "Property"} as Property);
                continue;
            }

            this.expect(TokenType.Colon, "Missing colon ':' following object expr");

            const value = this.parse_expr();

            properties.push({kind: "Property", value, key});

            if (this.at().type != TokenType.CloseBrace){
                this.expect(TokenType.Comma, "Expected comma or closing bracket following property");
            }
        }

        this.expect(TokenType.CloseBrace, "Expected closing brace for Object literal");

        return { kind: "ObjectLiteral", properties} as ObjectLiteral;
    }

    private parse_additive_expr(): Expr {
        let left = this.parse_multiplicative_expr();

        while (this.at().value == "+" || this.at().value == "-"){
            const operator = this.eat().value;
            const right = this.parse_multiplicative_expr();

            left = {
                kind: "BinaryExpr",
                left,
                right,
                operator,
            } as BinaryExpr;
        }

        return left;
    }

    private parse_multiplicative_expr(): Expr {
        let left = this.parse_call_member_expr();

        while (this.at().value == "/" || this.at().value == "*" || this.at().value == "%"){
            const operator = this.eat().value;
            const right = this.parse_call_member_expr();

            left = {
                kind: "BinaryExpr",
                left,
                right,
                operator,
            } as BinaryExpr;
        }

        return left;
    }

    private parse_comparison_expr(): Expr {
        let left = this.parse_additive_expr();

        while (this.at().value == ">" || this.at().value == "<" ||
        this.at().value == "==" || this.at().value == ">=" || this.at().value == "<="){
            const operator = this.eat().value;

            const right = this.parse_additive_expr();

            left = {
                kind: "BinaryExpr",
                left,
                right,
                operator
            } as BinaryExpr;
        }

        return left;
    }

    private parse_call_member_expr(): Expr {
        const member = this.parse_member_expr();

        if (this.at().type == TokenType.OpenParen){
            return this.parse_call_expr(member);
        }

        return member;
    }

    private parse_call_expr(caller: Expr): Expr {
        let call_expr: Expr = {
            kind: "CallExpr",
            caller,
            args: this.parse_args(),

        } as CallExpr;

        if (this.at().type == TokenType.OpenParen){
            call_expr = this.parse_call_expr(call_expr);
        }

        return call_expr;
    }

    private parse_args(): Expr[] {
        this.expect(TokenType.OpenParen, "Expected open parentheses");

        const args = this.at().type == TokenType.CloseParen ? [] : this.parse_arguments_list();

        this.expect(TokenType.CloseParen, "Missing closing parentheses");

        return args;
    }

    private parse_arguments_list(): Expr[] {
        const args = [this.parse_expr()];

        while (this.at().type == TokenType.Comma && this.eat()){
            args.push(this.parse_assignment_expr());
        }

        return args;
    }

    private parse_member_expr(): Expr {
        let object = this.parse_primary_expr();

        while (this.at().type == TokenType.Dot || this.at().type == TokenType.OpenBracket){
            const operator = this.eat();

            let property: Expr;
            let computed: boolean;

            if (operator.type == TokenType.Dot){
                computed = false;
                property = this.parse_primary_expr();

                if (property.kind != "Identifier"){
                    throw "Dot operator without rhs being identifier."
                }
            } else {
                computed = true;
                property = this.parse_expr();
                this.expect(TokenType.CloseBracket, "Missing closing bracket");
            }

            object = {kind: "MemberExpr", object, property, computed} as MemberExpr;
        }

        return object;
    }

    private parse_primary_expr(): Expr {
        const tk = this.at().type;

        switch (tk) {
            case TokenType.Identifier:
                return {kind: "Identifier", symbol: this.eat().value} as Identifier;
            case TokenType.Number:
                return {kind: "NumericLiteral", value: parseFloat(this.eat().value)} as NumericLiteral;
            case TokenType.OpenParen: {
                this.eat();
                const value = this.parse_expr();
                this.expect(
                    TokenType.CloseParen,
                    "Error inside parentheses expression. Are you missing a ')' ?"
                );
                return value;
            }

            default:
                console.error("Unexpected Token Found during parsing: ", this.at());
                process.exit(1);
        }
    }
}

